# kvtm-auto

./: .gitignore  CLAUDE.md  KvtmAuto.sln  README.md  docker-compose.yml  ecosystem.config.js  format.sh  package-lock.json  package.json  pnpm-lock.yaml  refactor.md  release.sh  start.sh  turbo.json
api/: .editorconfig  GlobalUsings.cs  KvtmAuto.csproj  KvtmAuto.csproj.lscache  Program.cs  appsettings.json
api/Automation/Engine/: IScript.cs  ScriptBase.cs
api/Automation/Scripts/: MuaVpsk.cs  NuocHoaTao.cs  TinhDauChanhVaiXanhLa.cs  TinhDauDuaTraHoaHong.cs  TrongCaySuKien.cs  VaiTim.cs  VaiXanhLa.cs
api/Core/: Result.cs
api/Core/Models/: Device.cs  Execution.cs  GameOptions.cs  Script.cs
api/Features/Devices/: DeviceDto.cs  DeviceManager.cs  DevicesController.cs
api/Features/Execution/: ExecutionController.cs  ExecutionDto.cs  ExecutionManager.cs
api/Features/Scripts/: ScriptDto.cs  ScriptManager.cs  ScriptsController.cs
api/Hubs/: LogHub.cs  ScreenHub.cs
api/Infrastructure/Database/: AppDbContext.cs
api/Infrastructure/Services/: AdbController.cs  ImageMatcher.cs
api/Properties/: launchSettings.json
apps/client/: package.json  tailwind.config.js  tsconfig.server.json
apps/client/src/app/: globals.css
apps/client/src/components/: DeviceLogModal.tsx  Modal.tsx
apps/client/src/lib/: socket.ts
apps/server/: package.json  pyproject.toml
apps/server/src/: main.py
apps/server/src/apis/: device_apis.py  stream_apis.py  system_apis.py
apps/server/src/libs/: adb_controller.py  device_manager.py
apps/server/src/models/: script.py
apps/server/src/scripts/: .ignore  01.nuoc_hoa_tao.py  02.vai_xanh_la.py  03.vai_tim.py  04.tinh_dau_dua_tra_hoa_hong.py  98.trong_cay_su_kien.py  99.mua_vpsk.py  99.trong_cay_su_kien.py  core.py
backend/: Dockerfile  package.json  pyproject.toml
backend/scripts/: _core.py  example_script.py  open_game.py
backend/src/: main.py
backend/src/api/: __init__.py  devices.py  execute.py  scripts.py
backend/src/apis/: device_apis.py  execution_apis.py  script_apis.py  stream_apis.py
backend/src/core/: __init__.py  adb.py  database.py  executor.py  image.py  script.py
backend/src/data/: device_state.json
backend/src/libs/: __init__.py  adb.py  adb_controller.py  device_manager.py  execution_manager.py  image.py  image_controller.py  script_manager.py  shell.py  storage_manager.py  time_provider.py
backend/src/models/: __init__.py  api.py  device.py  execution.py  game_options.py  script.py
backend/src/scripts/: .ignore  03.vai_tim.py  99.trong_cay_su_kien.py  __init__.py  _core.py  auto-vai-xanh-la.py  core.py  example_script.py  open_game.py  trong_cay_su_kien.py  vai_tim.py  vai_xanh_la.py
backend/src/service/: __init__.py  database.py  executor.py  script.py  script_runner.py
frontend/: .eslintrc.json  Dockerfile  index.html  next.config.js  nginx.conf  package-lock.json  package.json  server.ts  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/public/: index.html
frontend/src/: App.tsx  api.ts  index.css  main.tsx
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: DeviceDetailModal.tsx  DeviceLogModal.tsx  DeviceModal.tsx  LiveScreenModal.tsx  LogsModal.tsx  Modal.tsx  MultiSelect.tsx  SearchableSelect.tsx
web/: .prettierignore  index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/features/devices/: api.ts  hooks.ts  types.ts
web/src/features/devices/components/: DeviceDetailModal.tsx  DeviceLogModal.tsx
web/src/features/execution/: api.ts  hooks.ts  types.ts
web/src/features/scripts/: api.ts  hooks.ts  types.ts
web/src/features/stream/components/: LiveScreenModal.tsx
web/src/pages/: HomePage.tsx
web/src/shared/components/: Modal.tsx  MultiSelect.tsx  SearchableSelect.tsx
web/src/shared/hooks/: useLocalStorage.ts
web/src/shared/lib/: api-client.ts  signalr.ts
